added content and made adjustments

--- a/index.html
+++ b/index.html
@@ -1,27 +1,56 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Project Landing Page</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
+  <head>
+    <title>Project Landing Page</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/normalize.min.css" />
+  </head>
 
-    <body>
-        <div class="navbar">
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-        </div>
-    <div class="row">
-        <div class="main">
-            <h2>TITLE HEADING</h2>
-            <h5>TITLE DESCRIPTON</h5>
-            
-        </div>
+  <body>
+    <div class="navbar">
+      <a href="#">Link</a>
+      <a href="#">Link</a>
+      <a href="#">Link</a>
+      <a href="#">Link</a>
     </div>
 
-    <div class="footer"></div>
-    <h2>Footer</h2>
-    </body>
+    <div class="main">
+      <h2>Brexigar's Baggings</h2>
+      <h5>A place where you can purchase a bag for every need.</h5>
+      <div class="fakeimg">Image</div>
+      <br />
+      <p>
+        "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
+        consectetur, adipisci velit..."
+      </p>
+      <h2>Brexigar's Baggings</h2>
+      <h5>A place where you can purchase a bag for every need.</h5>
+      <div class="fakeimg">Image</div>
+      <br />
+      <p>
+        "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
+        consectetur, adipisci velit..."
+      </p>
+      <h2>Brexigar's Baggings</h2>
+      <h5>A place where you can purchase a bag for every need.</h5>
+      <div class="fakeimg">Image</div>
+      <br />
+      <p>
+        "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
+        consectetur, adipisci velit..."
+      </p>
+      <h2>Brexigar's Baggings</h2>
+      <h5>A place where you can purchase a bag for every need.</h5>
+      <div class="fakeimg">Image</div>
+      <br />
+      <p>
+        "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
+        consectetur, adipisci velit..."
+      </p>
+    </div>
+
+    <div class="footer"><h2>Footer</h2></div>
+  </body>
 </html>
