More style changes

--- a/index.html
+++ b/index.html
@@ -17,37 +17,34 @@
     </div>
 
     <div class="main">
-      <h2>Brexigar's Baggings</h2>
-      <h5>A place where you can purchase a bag for every need.</h5>
+      <h2>Mountain Peaks</h2>
+      <h5>Random Image Text</h5>
       <div class="fakeimg">Image</div>
       <br />
       <p>
         "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
         consectetur, adipisci velit..."
       </p>
-      <h2>Brexigar's Baggings</h2>
-      <h5>A place where you can purchase a bag for every need.</h5>
+      <h2>Crystal Falls</h2>
+      <h5>Random Image Text</h5>
+      <div class="fakeimg">Image</div>
+      <br />
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <h2>Whimsical Views</h2>
+      <h5>Random Image Text</h5>
       <div class="fakeimg">Image</div>
       <br />
       <p>
         "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
         consectetur, adipisci velit..."
       </p>
-      <h2>Brexigar's Baggings</h2>
-      <h5>A place where you can purchase a bag for every need.</h5>
+      <h2>Mountain Fields</h2>
+      <h5>Random Image Text..</h5>
       <div class="fakeimg">Image</div>
       <br />
       <p>
-        "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
-        consectetur, adipisci velit..."
-      </p>
-      <h2>Brexigar's Baggings</h2>
-      <h5>A place where you can purchase a bag for every need.</h5>
-      <div class="fakeimg">Image</div>
-      <br />
-      <p>
-        "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
-        consectetur, adipisci velit..."
+        Aliquam iaculis ligula nisi, ut viverra nisi dapibus id. Sed fermentum
+        dapibus sagittis.
       </p>
     </div>
 
